--- a/ar/index.html
+++ b/ar/index.html
@@ -43,7 +43,7 @@
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</small>
+                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i> السعودية،الرياض،مخرج 9</small>
                     <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
                 </div>
@@ -89,10 +89,8 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المزيد</a>
                         <div class="dropdown-menu m-0">
                             <a href="price.html" class="dropdown-item">اسعار الخدمات</a>
-                            <a href="feature.html" class="dropdown-item">ما يميزنا</a>
                             <a href="team.html" class="dropdown-item">فريق العمل </a>
                             <a href="testimonial.html" class="dropdown-item">ماذا قالو عنا</a>
-                            <a href="quote.html" class="dropdown-item">اشترك معنا</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">تواصل معنا </a>
@@ -108,7 +106,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
             
-                            <h6 class="display-1 text-white mb-md-4 animated zoomIn">شركة الأنظمة الشاملة  إحدى الشركات الرائدة سريعة النمو  </h6>
+                            <h6 class="display-1 text-white mb-md-4 animated zoomIn">شركة الأنظمة الشاملة    </h6>
                             <a href="quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">التسجيل</a>
                             <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">تسجيل جديد</a>
                         </div>
@@ -119,7 +117,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                            
-                            <h3 class="display-1 text-white mb-md-4 animated zoomIn">شركة الأنظمة الشاملة  إحدى الشركات الرائدة سريعة النمو </h3>
+                            <h6 class="display-1 text-white mb-md-4 animated zoomIn">  إحدى الشركات الرائدة سريعة النمو </h6>
                             <a href="quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">التسجيل</a>
                             <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">تسجيل جديد</a>
                         </div>
