--- a/ar/about.html
+++ b/ar/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Startup - Startup Website Template</title>
+    <title>شركة الأنظمة الشاملة-من نحن</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -44,7 +44,7 @@
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</small>
+                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>السعودية،الرياض،مخرج 9</small>
                     <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
                 </div>
@@ -82,18 +82,16 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">الاخبار</a>
                         <div class="dropdown-menu m-0">
-                            <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                            <a href="detail.html" class="dropdown-item">Blog Detail</a>
+                            <a href="blog.html" class="dropdown-item">الاخبار</a>
+                            <a href="detail.html" class="dropdown-item">المقالات</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المزيد</a>
                         <div class="dropdown-menu m-0">
                             <a href="price.html" class="dropdown-item">اسعار الخدمات</a>
-                            <a href="feature.html" class="dropdown-item">ما يميزنا</a>
                             <a href="team.html" class="dropdown-item">فريق العمل </a>
-                            <a href="testimonial.html" class="dropdown-item">ماذا قالو عننا</a>
-                            <a href="quote.html" class="dropdown-item">اشترك معنا</a>
+                            <a href="testimonial.html" class="dropdown-item">ماذا قالو عنا</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">تواصل معنا </a>
