--- a/ar/blog.html
+++ b/ar/blog.html
@@ -90,10 +90,8 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المزيد</a>
                         <div class="dropdown-menu m-0">
                             <a href="price.html" class="dropdown-item">اسعار الخدمات</a>
-                            <a href="feature.html" class="dropdown-item">ما يميزنا</a>
                             <a href="team.html" class="dropdown-item">فريق العمل </a>
                             <a href="testimonial.html" class="dropdown-item">ماذا قالو عنا</a>
-                            <a href="quote.html" class="dropdown-item">اشترك معنا</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">تواصل معنا </a>
@@ -125,7 +123,7 @@
                 </div>
                 <div class="modal-body d-flex align-items-center justify-content-center">
                     <div class="input-group" style="max-width: 600px;">
-                        <input type="text" class="form-control bg-transparent border-primary p-3" placeholder="Type search keyword">
+                        <input type="text" class="form-control bg-transparent border-primary p-3" placeholder="البحث عن خدمة">
                         <button class="btn btn-primary px-4"><i class="bi bi-search"></i></button>
                     </div>
                 </div>
