--- a/ar/contact.html
+++ b/ar/contact.html
@@ -44,7 +44,7 @@
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</small>
+                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>السعودية،الرياض،مخرج 9<small>
                     <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
                 </div>
@@ -82,18 +82,16 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">الاخبار</a>
                         <div class="dropdown-menu m-0">
-                            <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                            <a href="detail.html" class="dropdown-item">Blog Detail</a>
+                            <a href="blog.html" class="dropdown-item">الأخبار</a>
+                            <a href="detail.html" class="dropdown-item">المقالات</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المزيد</a>
                         <div class="dropdown-menu m-0">
                             <a href="price.html" class="dropdown-item">اسعار الخدمات</a>
-                            <a href="feature.html" class="dropdown-item">ما يميزنا</a>
                             <a href="team.html" class="dropdown-item">فريق العمل </a>
-                            <a href="testimonial.html" class="dropdown-item">ماذا قالو عننا</a>
-                            <a href="quote.html" class="dropdown-item">اشترك معنا</a>
+                            <a href="testimonial.html" class="dropdown-item">ماذا قالو عنا</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link active">تواصل معنا </a>
@@ -126,7 +124,7 @@
                 </div>
                 <div class="modal-body d-flex align-items-center justify-content-center">
                     <div class="input-group" style="max-width: 600px;">
-                        <input type="text" class="form-control bg-transparent border-primary p-3" placeholder="Type search keyword">
+                        <input type="text" class="form-control bg-transparent border-primary p-3" placeholder="البحث عن خدمة">
                         <button class="btn btn-primary px-4"><i class="bi bi-search"></i></button>
                     </div>
                 </div>
