--- a/ar/detail.html
+++ b/ar/detail.html
@@ -106,7 +106,7 @@
                     <h1 class="display-4 text-white animated zoomIn">المقالات</h1>
                     <a href="" class="h5 text-white">الرئيسية</a>
                     <i class="far fa-circle text-white px-2"></i>
-                    <a href="" class="h5 text-white">الرئيسية</a>
+                    <a href="" class="h5 text-white">المقالات</a>
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="modal-body d-flex align-items-center justify-content-center">
                     <div class="input-group" style="max-width: 600px;">
-                        <input type="text" class="form-control bg-transparent border-primary p-3" placeholder="Type search keyword">
+                        <input type="text" class="form-control bg-transparent border-primary p-3" placeholder="البحث عن خدمة">
                         <button class="btn btn-primary px-4"><i class="bi bi-search"></i></button>
                     </div>
                 </div>
