--- a/ar/index.html
+++ b/ar/index.html
@@ -753,7 +753,7 @@
                 <div class="col-lg-4 col-md-6 footer-about">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary p-4">
                         <a href="index.html" class="navbar-brand">
-                            <img class="w-100" src="img/logo.jpg" alt="Image" style="height: 100px;">
+                            <img class="w-100" src="img/logo 12.50.44 PM.jpg" alt="Image" style="height: 100px;">
                         </a>
                         <p class="mt-3 mb-4">ليصلك اخر الاخبار و التحديثات لدى شركة الانظمة الشاملة يمكنك الاشتراك معنا</p>
                     </br>
