--- a/ar/service_A.html
+++ b/ar/service_A.html
@@ -140,10 +140,10 @@
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-8">
+                <div class="col-lg-12">
                     <!-- Blog Detail Start -->
                     <div class="mb-5">
-                        <img class="img-fluid w-100 rounded mb-5" src="img/blog-1.jpg" alt="">
+                        <!--img class="img-fluid w-100 rounded mb-5" src="img/blog-1.jpg" alt=""-->
                         <h1 class="mb-4">خدمات التوظيف عن بعد Remote Recruitment      </h1>
                         <p>من أكبر التحديات التي تواجه الشركات في حال طلب موظفين بنظام العمل عن بُعد هو عملية الاختيار والتعيين وكذلك مسألة توثيق العلاقة التعاقدية بين الشركة والموظف هذا التوثيق الذي يضمن لكل طرف حفظ حقوقه تجاه الطرف الآخر ، وتقدم شركة الأنظمة الشالمة خدمات التوظيف عن بعد من خلال فروع الشركة في مصر والسودان والهند ومن خلال هذه الخدمة تستطيع الشركات والهيئات التعاقد مع شركة الأنظمة الشاملة  والحصول على خدمات الكوادر البشرية المدربة والمؤهلة في مختلف مجالات الأعمال بعلاقة تعاقدية تضمن حفظ حقوق الطرفين وبأسعار تنافسية لا تتخطى 50% من التكلفة الفعلية في حال لو تم استقدام الموظف للعمل داخل المملكة.
                         </p>
@@ -207,7 +207,7 @@
 
 
     <!-- Vendor Start -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <!--div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5 mb-5">
             <div class="bg-white">
                 <div class="owl-carousel vendor-carousel">
@@ -223,7 +223,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div-->
     <!-- Vendor End -->
     
 
